sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: '<-' expected but ')' found.
    for (i+ecart<getNombreValeurs()-1){
                                     ^AlgCombSort:16: error: illegal start of simple expression
  }while (inverse) || ecart>1
  ^AlgCombSort:16: error: ';' expected but identifier found.
  }while (inverse) || ecart>1
                   ^