sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart : Int = getNombreValeurs()-1
  var inverse = true
  do{
    if (ecart>1){
      ecart=(ecart.toDouble/1.3).toInt
    }
    inverse = false
    for (i+ecart<getNombreValeurs()-1){
      if (!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        inverse=true
      }
    }
  }while (inverse) || ecart>1
}